# test

Autotools/Dynamic_lib/: Auto_DHDLC  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  debug.h  hdlc.lo  libAuto_DHDLC.la  libtool  run.c
Autotools/Dynamic_lib/.deps/: hdlc.Plo
Autotools/Dynamic_lib/.libs/: Auto_DHDLC  libAuto_DHDLC.la  libAuto_DHDLC.lai  libAuto_DHDLC.so.0  libAuto_DHDLC.so.0.0.0
Autotools/Dynamic_lib/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Autotools/HDLC/: Auto_HDLC  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac
Autotools/HDLC/.deps/: hdlc.Po
Autotools/HDLC/autom4te.cache/: output.1  requests  traces.0  traces.1
Autotools/Static_lib/: Auto_SHDLC  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  run_test
Autotools/Static_lib/.deps/: run.Po
Autotools/Static_lib/autom4te.cache/: output.1  requests  traces.0  traces.1
Autotools/Static_lib/sava/: Makefile.am  configure.ac
Autotools/example/: Makefile  Makefile.in  config.status  configure  configure.ac
Autotools/example/autom4te.cache/: output.0  requests  traces.1
Autotools/example/src/: Makefile  hello
DEBUG/Simple_debug/: debug  debug.c
DEBUG/env_debug/: ENV_Debug.c  debug.h  env.h  env_debug  hexprint.h
GCC/: D_option  D_option.c  E_option.c
HDLC/: crc_table.h  hdlc.c  run.c  run.out
Make/: Makefile  a  hdlc.c
Make/MakeFile together/: Dynamic_makefile  Static_Makefile.mk
OS_test/: OS_test  OS_test.c
bitbake/: Makefile  example_0.1.bb  hdlc.c  hdlc.h  hdlc_example_0.1.bb  run.c  text.txt
cross_compile/: hello.c
readfile/: a.out  readfile1.c  readfile2.c  readfile3.c
server_test/: client  server
socket/: client  client to ecipse  hdlc.h  hdlc_dec.c  hdlc_enc.c  server  server.c
test_Library/Dynamic_library/: dynamic_Library  hex_Library.c
test_Library/static_library/: test_Library  test_Library.c
(+7 files in other folders)
